0.11 20091130
    . Don't carp() in ::TiedHash or ::TiedArray

0.10 20091126
    . Add way to deregister callbacks to release the memory
      taken up on the Perl side for them.

0.09 20091121
    . Add tests for multiple bridge instances
    . Multiple bridge instances work (except for some warnings
      originating from MozRepl.pm)
    . Some code cleanup

0.08 20091111
    . Localize $@ in the destructor so we don't eat
      exceptions.
    . Allow for passing of multiple parameters in callbacks

0.07 20091109
    . Always use our own JSON encoder on the Javascript side.
      The native encoders don't output ASCII. This is sad,
      but there seems to be a problem with the encodings along the way.

0.06 20091102
    . Added __event() to send arbitrary events

0.05 20091031
    . Implement callbacks/events

0.04 20091030
    . Added exists functionality for hashes
    . added $bridge->appinfo as a convenience function

0.03 20091029
    ! Fixed ->__xpath
    ! Fixed bad use of ->declare
    * Use the stable but large encoding of 7-bit ASCII
      for communication by switching to String.toSourceCode() on the
      JS side.

0.02 20091027
    * ->__xpath returned numbers instead of objects
    * The object was split into two classes, one for bridge functionality
      and one for instance functionality
    * $bridge->declare() for declaring cached anonymous functions

0.01 20091018
    . released on CPAN