@@ -1,5 +1,6 @@
 0.11 20091130
     . Don't carp() in ::TiedHash or ::TiedArray
+    . Added "launch" option to launch a mozrepl process
 
 0.10 20091126
     . Add way to deregister callbacks to release the memory
